Use ListView Positions To Animate Views. This Prevents Out Of View Animation To Occur Or Animate The View Of A Different Data After View Recycling. Compatible To API11

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,20 @@
         <activity
             android:name="com.desmond.allaboutlistview.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.desmond.allaboutlistview.ListViewAnimations.ListViewAnimationActivity"
+            android:label="@string/title_activity_list_view_animation" >
+
+        </activity>
+        <activity
+            android:name=".ListViewDeletion.ListViewDeletionActivity"
+            android:label="@string/title_activity_list_view_deletion" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.desmond.allaboutlistview.ListViewAnimations.ListViewAnimationActivity"
-            android:label="@string/title_activity_list_view_animation" >
         </activity>
     </application>
 
