--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         <activity
             android:name="com.desmond.allaboutlistview.ListViewAnimations.ListViewAnimationActivity"
             android:label="@string/title_activity_list_view_animation" >
-
         </activity>
         <activity
-            android:name=".ListViewDeletion.ListViewDeletionActivity"
+            android:name="com.desmond.allaboutlistview.ListViewDeletion.ListViewDeletionActivity"
             android:label="@string/title_activity_list_view_deletion" >
+        </activity>
+        <activity
+            android:name="com.desmond.allaboutlistview.ListViewRemovalAnimation.ListViewRemovalAnimation"
+            android:label="@string/title_activity_list_view_removal_animation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
