--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,16 @@
         <activity
             android:name="com.desmond.allaboutlistview.ListViewRemovalAnimation.ListViewRemovalAnimation"
             android:label="@string/title_activity_list_view_removal_animation" >
+        </activity>
+        <activity
+            android:name="com.desmond.allaboutlistview.ListViewCellInsertion.ListViewCellInsertionActivity"
+            android:label="@string/title_activity_list_view_cell_insertion" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
