--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,15 @@
         <activity
             android:name="com.desmond.allaboutlistview.ListViewCellInsertion.ListViewCellInsertionActivity"
             android:label="@string/title_activity_list_view_cell_insertion" >
-
+        </activity>
+        <activity
+            android:name="com.desmond.allaboutlistview.ListViewDraggingAnimation.ListViewDraggingActivity"
+            android:label="@string/title_activity_list_view_dragging" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
